fix: height of horizontal scrollbars

--- a/src/app.css
+++ b/src/app.css
@@ -77,7 +77,7 @@ select {
 }
 
 ::-webkit-scrollbar {
-  @apply w-2 bg-primary-800 rounded;
+  @apply w-2 h-2 bg-primary-800 rounded;
 }
 
 ::-webkit-scrollbar-corner {
